--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,9 @@ collection-date: "2018"
 # url is your gh-pages base, following the pattern: username.github.io
 url: https://uidaholib.github.io
 # baseurl is your github repository's name prefixed with a /
-baseurl: /blank-template
+baseurl: /blank-collectionbuilder-template
 # repository is the github repository's full url
-repository: https://github.com/uidaholib/blank-template
+repository: https://github.com/uidaholib/blank-collectionbuilder-template
 
 # Theme Options
 # Use fontawesome CDN (true, false), https://fontawesome.com/how-to-use/on-the-web/setup/getting-started?using=web-fonts-with-css
